CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(kch C)
SET(CMAKE_C_FLAGS "-Wall")

SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")

FILE(GLOB srcs src/*.c)
FILE(GLOB hdrs include/*.h)
ADD_LIBRARY(kch SHARED ${srcs})
TARGET_INCLUDE_DIRECTORIES(kch PUBLIC ./include)
INSTALL(FILES ${hdrs} DESTINATION include)
INSTALL(TARGETS kch DESTINATION lib)
