CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(khc C)
SET(CMAKE_C_FLAGS "-Wall")

SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")

FILE(GLOB srcs src/*.c)
FILE(GLOB hdrs include/*.h)
ADD_LIBRARY(khc SHARED ${srcs})
TARGET_INCLUDE_DIRECTORIES(khc PUBLIC ./include)
INSTALL(FILES ${hdrs} DESTINATION include)
INSTALL(TARGETS khc DESTINATION lib)
